@@ -17,8 +17,10 @@ apport (0.42) UNRELEASED; urgency=low
   * bin/apport: Only unlink the core dump if it still exists. Closes: LP#80866
   * gtk/apport-gtk.glade: Fix expand/fill attributes so that the expander gets
     all the space when resizing the window. Closes: LP#80987
+  * problem_report.py, write_mime(): Make sure that multi-line values that go
+    to the summary are terminated with a newline.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 22 Jan 2007 17:19:20 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 22 Jan 2007 17:42:00 +0100
 
 apport (0.41) feisty; urgency=low
 
